# umm-malloc-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: global_alloc.rs
src/: lib.rs
umm-malloc-sys/: Cargo.toml  LICENSE  README.md  build.rs
umm-malloc-sys/src/: bindings.h  lib.rs  umm_malloc_cfgport.h
