[package]
name = "umm-malloc-sys"
version = "0.1.1"
authors = ["Ralph Hempel", "Matt Ickstadt <mattico8@gmail.com>"]
license = "MIT"
edition = "2018"
categories = ["embedded", "no-std", "external-ffi-bindings"]
keywords = ["allocator", "arm", "cortex-m", "malloc"]
description = "FFI bindings to the umm_malloc memory allocator."
repository = "https://github.com/mattico/umm-malloc-rs"

[build-dependencies]
bindgen = "0.56"
cc = { version = "1" }

[features]
# see umm_malloc_cfg.h

# Add critical sections around allocator internals. You must supply the 
# _umm_critical_entry() and _umm_critical_exit() functions.
sync = []

# Use the first available block for allocation, rather than search for a better fit.
first-fit = []
